Get products rates from Rates registry. Tools rate still taken from Custim specs

--- a/budget_report.ipynb
+++ b/budget_report.ipynb
@@ -64,6 +64,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "order_params_query = '''\n",
+    "SELECT\n",
+    "    CAST(DATEADD([YEAR], -2000, orders._Fld16402) AS date) AS calcDate, \n",
+    "    price_types.[_Description] AS priceType,\n",
+    "    CAST(price_types.[_IDRRef] AS uniqueidentifier) AS priceTypeId\n",
+    "FROM\n",
+    "    _Document164X1 AS orders\n",
+    "    LEFT JOIN _InfoRg16413 as numbers on numbers._Fld16426RRef = orders._idrref\n",
+    "    LEFT JOIN _Reference36 AS price_types ON price_types._IDRRef = orders._Fld3599RRef\n",
+    "WHERE \n",
+    "    numbers._Fld16427 LIKE '13925/13/%'\n",
+    "'''\n",
+    "\n",
+    "order_params = pd.read_sql(order_params_query, engine_unf)\n",
+    "calc_date = order_params.calcDate.values[0]\n",
+    "price_type_id = order_params.priceTypeId.values[0]\n",
+    "price_type = order_params.priceType.values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "order_query = '''\n",
     "-- earned value report.sql\n",
     "-- get order\n",
@@ -107,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +348,7 @@
        "array(['Фиброгипс'], dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +408,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products = order[order.tech.isin([\n",
+    "    'Фиброгипс',\n",
+    "    'Отливка',\n",
+    "    'Протяжка',\n",
+    "    'Отливная тяга резина', \n",
+    "    'Отливная тяга пластик'\n",
+    "])][['item', 'itemId']].drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product_ids = \"'\" + \"', '\".join(products.itemId) + \"'\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "price_query = f'''\n",
+    "-- all_prices_4.sql\n",
+    "WITH d AS (\n",
+    "    SELECT \n",
+    "        CAST(items.[_IDRRef] AS uniqueidentifier) AS itemId\n",
+    "        , items._Description AS Наименование\n",
+    "        , CAST(DATEADD([YEAR], -2000, _Period) AS date) AS Дата\n",
+    "        , ROW_NUMBER()  OVER (\n",
+    "                                PARTITION BY \n",
+    "--                                    CAST(items._Fld1527 AS int)  -- артикул\n",
+    "                                    items.[_IDRRef]\n",
+    "                                    , price_types._Description      -- ВидЦены\n",
+    "                                ORDER BY \n",
+    "                                    CAST(DATEADD([YEAR], -2000, _Period) AS date) DESC  -- Дата\n",
+    "--                                ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING\n",
+    "                                )\n",
+    "            AS row_num\n",
+    "        , prices._Fld7568 AS Цена\n",
+    "        , price_types._Description AS ВидЦены\n",
+    "    FROM _InfoRg7564 AS prices\n",
+    "        LEFT JOIN _Reference36 AS price_types ON prices._Fld7565RRef = price_types._IDRRef\n",
+    "        LEFT JOIN _Reference76 AS items ON prices._Fld7566RRef = items._IDRRef\n",
+    "        LEFT JOIN _Reference79 as tech ON items._Fld1533RRef = tech._IDRRef \n",
+    "        LEFT JOIN _Reference68 AS partners ON items._Fld16820RRef = partners._IDRRef\n",
+    "    WHERE\n",
+    "        price_types._Description IN ('Исполнитель', '{price_type}')\n",
+    "        AND CAST(items._IDRRef AS uniqueidentifier) IN ({product_ids})\n",
+    ") \n",
+    "SELECT \n",
+    "    Наименование\n",
+    "    , itemId\n",
+    "    , Дата\n",
+    "    , ВидЦены\n",
+    "    , Цена\n",
+    "FROM d\n",
+    "WHERE row_num = 1\n",
+    "ORDER BY Наименование, ВидЦены\n",
+    "'''\n",
+    "\n",
+    "prices = pd.read_sql(price_query, engine_unf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,14 +520,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_rate(row):\n",
     "    try:\n",
-    "        if pd.isnull(row.spec):\n",
-    "            return specs[row.itemId==specs.componentId].rate.values[0]\n",
+    "        if row.tech in [\"Фиброгипс\", \"Протяжка\", \"Отливка\", \n",
+    "                \"Отливная тяга резина\", \"Отливная тяга пластик\"]:   \n",
+    "            rate = prices[\n",
+    "                (prices.itemId==row.itemId) &\n",
+    "                (prices.ВидЦены==\"Исполнитель\")\n",
+    "            ].Цена.values[0]\n",
+    "            return rate\n",
+    "        \n",
     "        return specs[(row.itemId==specs.componentId) & (row.specId==specs.specId)].rate.values[0]\n",
     "    except:\n",
     "        pass\n",
@@ -440,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +741,7 @@
        "-1"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +773,7 @@
        "'output.gv.pdf'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
